<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinator"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <org.digitalcampus.oppia.utils.ui.WebViewPager
            android:id="@+id/activity_widget_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <include
                android:id="@+id/toolbar"
                layout="@layout/toolbar" />

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabs_toolbar"
                style="@style/Oppia.ToolbarTheme.AppTabLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:tabMaxWidth="2000dp" />
        </com.google.android.material.appbar.AppBarLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <ScrollView
        android:id="@+id/unlock_topic_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:fillViewport="true"
        android:visibility="gone"
        tools:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@color/background_light"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingStart="@dimen/padding_large"
            android:paddingEnd="@dimen/padding_large">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/lock_indicator"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/ic_lock"
                app:tint="@color/grey_dark" />

            <TextView
                android:id="@+id/password_title"
                style="@style/SectionHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:gravity="center_horizontal"
                android:text="@string/password_needed" />

            <TextView
                android:id="@+id/password_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:gravity="center_horizontal"
                android:text="@string/password_needed_description"
                android:textAppearance="@style/NormalTextDark"
                android:textColor="@color/text_grey" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/section_password_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_password_title"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/section_password_error"
                style="@style/Oppia.Theme.InputError"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/incorrect_password_topic"
                android:visibility="gone"
                tools:visibility="visible" />

            <Button
                android:id="@+id/submit_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:gravity="center"
                android:text="@string/unlock_topic" />

        </LinearLayout>
    </ScrollView>

</FrameLayout>