...
            android:layout_alignParentStart="true"
            android:text="@string/drawer_header_userfullname_placeholder"
            android:textColor="@color/subtitle_bar_text_color"
            android:textSize="15sp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btn_expand_profile_options"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            app:srcCompat="@drawable/ic_expand"
...
                style="@style/TextMenuItem"
                android:text="@string/change_password" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_logout"
            style="@style/MenuItemLayout">

            <androidx.appcompat.widget.AppCompatImageView
                style="@style/MenuIcon"
                app:srcCompat="@drawable/ic_action_logout" />

...
